[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "26adnanansari", email = "zamzampackage@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.302",
]

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
